renamed to choices, productname into config

--- a/buyme/templates/buy.html
+++ b/buyme/templates/buy.html
@@ -14,8 +14,8 @@ body {font-family:Verdana,Arial,sans-serif;}
 <body>
 {{pageheader | safe}}
 <h1>BuyMe</h1>
-<h2>Buy Time with an Expert in BitCoin, Blockchain, Cryptocurrencies.</h2>
-<p>We can SKYPE, I can CODE for you, RESEARCH your topics, ANALYZE your DATA, etc.
+<h2>{{productname}}</h2>
+<p>{{productdescription}}
 <h3>This app ...</h3> 
 ... is a <em>live example</em> how easily BITCOIN PAYMENTS can be in integrated in a website.<br/>
 {{linkToOtherVersion | safe}}</p>
