--- a/buyme/templates/buy.html
+++ b/buyme/templates/buy.html
@@ -16,10 +16,10 @@ body {font-family:Verdana,Arial,sans-serif;}
 <h1>BuyMe</h1>
 <h2>{{productname}}</h2>
 <p>{{productdescription}}
-<h3>This app ...</h3> 
-... is a <em>live example</em> how easily BITCOIN PAYMENTS can be in integrated in a website.<br/>
+<h3>This app (version {{version}})...</h3> 
+<p>... is a <em>live example</em> how easily BITCOIN PAYMENTS can be in integrated in a website.</p>
 {{linkToOtherVersion | safe}}</p>
-
+<hr/>
 <p>
 How much of my time you want? Give an email address:
 </p>
