--- a/buyme/templates/buy.html
+++ b/buyme/templates/buy.html
@@ -13,10 +13,10 @@ body {font-family:Verdana,Arial,sans-serif;}
 </head>
 <body>
 {{pageheader | safe}}
-<h1>BuyMe</h1>
+<h1>BuyMe {{version}}</h1>
 <h2>{{productname}}</h2>
 <p>{{productdescription}}
-<h3>This app (version {{version}})...</h3> 
+<h3>This app ...</h3> 
 <p>... is a <em>live example</em> how easily BITCOIN PAYMENTS can be in integrated in a website.</p>
 {{linkToOtherVersion | safe}}</p>
 <hr/>
