--- a/buyme/templates/buy.html
+++ b/buyme/templates/buy.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Buy Time with an Expert in BitCoin, Blockchain, Cryptocurrencies</title>
+<title>{{productname}}</title>
 <style type="text/css">
 ul.errorlist {list-style-type: none; display:inline; margin-left: 0; padding-left: 0;}
 ul.errorlist li {display: inline; color:red; }
