--- a/buyme/templates/buy.html
+++ b/buyme/templates/buy.html
@@ -4,15 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{productname}}</title>
 <style type="text/css">
-ul.errorlist {list-style-type: none; display:inline; margin-left: 0; padding-left: 0;}
-ul.errorlist li {display: inline; color:red; }
-.required { font-weight: bold; }
-form table tr td {vertical-align: top;}
-body {font-family:Verdana,Arial,sans-serif;}
+{{style}}
 </style>
 </head>
-<body>
-{{pageheader | safe}}
+<body>{{pageheader | safe}}
 <h1>BuyMe {{version}}</h1>
 <h2>{{productname}}</h2>
 <p>{{productdescription}}
